--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       }
       h1 {
         margin-top: 0;
+        text-align: center;
       }
       .dropzone {
         border: 2px dashed var(--border);
@@ -83,6 +84,7 @@
         border: 1px solid var(--border);
         background: none;
         color: var(--text);
+        cursor: pointer;
       }
       button.main {
         background: var(--primary);
@@ -92,6 +94,7 @@
       }
       button:disabled {
         opacity: 0.5;
+        cursor: not-allowed;
       }
       .status {
         margin-top: 12px;
@@ -139,17 +142,35 @@
 
         <h1>📦 Update Giá & Tồn Kho theo SKU</h1>
 
+        <!-- FILE SHOPIFY -->
         <div class="dropzone" id="csvZone">
           <div class="label">📄 File tổng sản phẩm trên Shopify</div>
           <div class="small">CSV – kéo thả hoặc click</div>
           <input type="file" accept=".csv" />
         </div>
 
+        <!-- FILE UPDATE -->
         <div class="dropzone" id="excelZone">
           <div class="label">📊 File cập nhật giá/tồn kho cho Website L&M</div>
           <div class="small">XLSX / XLS</div>
           <input type="file" accept=".xlsx,.xls" />
+
+          <div class="small" style="margin-top: 8px; line-height: 1.5">
+            + Cột SKU: cột A<br />
+            + Cột Giá Giảm: cột B<br />
+            + Cột Giá Gốc: cột C<br />
+            + Cột tồn kho: cột D
+          </div>
         </div>
+
+        <!-- PREVIEW TEMPLATE BUTTON -->
+        <button
+          type="button"
+          style="margin-top: 8px"
+          onclick="previewUpdateTemplate(event)"
+        >
+          👁 Preview file mẫu
+        </button>
 
         <div class="controls">
           <select id="exportType">
@@ -186,6 +207,8 @@
       let csvData,
         excelData,
         updatedRows = [];
+      let isPreviewTemplateVisible = false;
+
       const btn = document.getElementById("processBtn");
       const status = document.getElementById("status");
       const preview = document.getElementById("preview");
@@ -264,7 +287,7 @@
         let count = 0;
 
         for (let i = 1; i < csvData.length; i++) {
-          const sku = csvData[i][17]; // R
+          const sku = csvData[i][17];
           const u = sku && map[sku.toString().trim()];
           if (u) {
             let changed = false;
@@ -272,15 +295,15 @@
             if (hasValue(u.p)) {
               csvData[i][23] = u.p;
               changed = true;
-            } // X
+            }
             if (hasValue(u.c)) {
               csvData[i][24] = u.c;
               changed = true;
-            } // Y
+            }
             if (hasValue(u.q)) {
               csvData[i][20] = u.q;
               changed = true;
-            } // U
+            }
 
             if (changed) {
               updatedRows.push([
@@ -301,8 +324,10 @@
 
       function renderPreview() {
         let html = `<h3>🔍 Preview dữ liệu đã cập nhật</h3>
-  <table><tr>
-  <th>SKU</th><th>Giá giảm</th><th>Giá gốc</th><th>Tồn kho</th></tr>`;
+        <table>
+          <tr>
+            <th>SKU</th><th>Giá giảm</th><th>Giá gốc</th><th>Tồn kho</th>
+          </tr>`;
         updatedRows.forEach((r) => {
           html += `<tr>${r.map((v) => `<td>${v}</td>`).join("")}</tr>`;
         });
@@ -313,14 +338,15 @@
       function exportFile() {
         const type = document.getElementById("exportType").value;
         const sheet = XLSX.utils.aoa_to_sheet(csvData);
+        const ts = new Date().toISOString().replace(/[:T]/g, "-").slice(0, 16);
 
         if (type === "csv") {
           const csv = XLSX.utils.sheet_to_csv(sheet);
-          download(csv, "SHOPIFY_UPDATED_BY_SKU.csv", "text/csv");
+          download(csv, `SHOPIFY_UPDATED_${ts}.csv`, "text/csv");
         } else {
           const wb = XLSX.utils.book_new();
           XLSX.utils.book_append_sheet(wb, sheet, "Updated");
-          XLSX.writeFile(wb, "SHOPIFY_UPDATED_BY_SKU.xlsx");
+          XLSX.writeFile(wb, `SHOPIFY_UPDATED_${ts}.xlsx`);
         }
       }
 
@@ -330,6 +356,44 @@
         a.href = URL.createObjectURL(b);
         a.download = n;
         a.click();
+      }
+
+      function previewUpdateTemplate(e) {
+        e.stopPropagation(); // ⭐ chặn click lan lên dropzone
+
+        if (isPreviewTemplateVisible) {
+          preview.innerHTML = "";
+          isPreviewTemplateVisible = false;
+          return;
+        }
+
+        preview.innerHTML = `
+          <h3>📄 Preview cấu trúc file cập nhật</h3>
+          <table>
+            <tr>
+              <th>SKU (A)</th>
+              <th>Giá giảm (B)</th>
+              <th>Giá gốc (C)</th>
+              <th>Tồn kho (D)</th>
+            </tr>
+            <tr>
+              <td>LM-001</td>
+              <td>1200000</td>
+              <td>1500000</td>
+              <td>10</td>
+            </tr>
+            <tr>
+              <td>LM-002</td>
+              <td></td>
+              <td>1800000</td>
+              <td></td>
+            </tr>
+          </table>
+          <div class="small" style="margin-top:6px">
+            * Ô trống sẽ được giữ nguyên giá trị cũ trong Shopify
+          </div>
+        `;
+        isPreviewTemplateVisible = true;
       }
     </script>
   </body>
